fixed spacing and things

--- a/client/src/Components/HowJoWorks/howjoworks.css
+++ b/client/src/Components/HowJoWorks/howjoworks.css
@@ -31,7 +31,16 @@
         padding: 1rem 2rem;
     }
 } */
-@media only screen and (max-width:600px){
+
+@media only screen and (max-width:280px){
+    .extensionimg{
+        display: none;
+    }
+    #extensionColumn{
+        padding: 0rem;
+    }
+}
+@media only screen and (min-width:281px) and (max-width:600px){
     .extensionimg{
         width: 75%;
         margin-left: 3rem;
