--- a/client/src/Pages/styles.css
+++ b/client/src/Pages/styles.css
@@ -213,7 +213,72 @@ img {
         margin-top: 15vh;
     }
 }
-@media only screen and (max-width:600px){
+@media only screen and (max-width:401px){
+    .form{
+        width: 20rem !important;
+    }
+    #mainJoTheFish {
+        width: 100%;
+        left: 0rem;
+        padding: 0;
+    }
+    #arrowDown {
+        display: block;
+    }
+    #whiteArrowDown {
+        display: none;
+    }
+    .jumbotron {
+        justify-content: center;
+        padding: 2rem !important;
+        /* margin: 0% 25% 0% 25% !important; */
+        text-align: center;
+        background-color: transparent !important;
+        margin-bottom: 0 !important;
+    }
+    .getinvolved { 
+        padding: 1rem !important;
+        text-align: justify !important;
+    }
+    #partialJo {
+        width: 9rem;
+        position: absolute;
+        right: 0 !important;
+    }
+    #blueJo {
+        display: none;
+    }
+    #mobileBlueJo {
+        display: block;
+        text-align: left;
+        padding: 20vh 2vh 5vh 2vh !important;
+    }
+    .alignheading {
+        font-size: 30px;
+        margin: 3rem 1rem 1rem 0rem !important;
+    }
+    .aligntext {
+        font-size: 10px;
+        width: 9.5rem;
+        margin: 1rem 0rem !important;
+    }
+    #comingsoon {
+        font-size: 12px;
+        margin: 1rem 0rem !important;
+    }
+    .centeralignheading {
+        margin-top: 5rem;
+    }
+    .teamUnderTheWave2 {
+        display: block;
+    }
+    .underTheWave {
+        background-image: url(../Jo/1940px_longest_background.svg);
+        bottom: 0;
+        background-size: auto;
+    }
+}
+@media only screen and (min-width:402px) and (max-width:600px){
     .form{
         width: 20rem !important;
     }
@@ -278,7 +343,7 @@ img {
         background-size: auto;
     }
 }
-@media only screen and (min-device-width: 766px) and (max-width:1024px){
+@media only screen and (min-device-width: 767px) and (max-width:1024px){
     .form{
         width: 40rem !important;
         left: 0;
@@ -307,7 +372,7 @@ img {
         background-size: auto;
     }
 }
-@media only screen and (min-device-width: 601px) and (max-width:765px){
+@media only screen and (min-device-width: 601px) and (max-width:766px){
     .form{
         width: 20rem !important;
     }
